add different java versions support and execution statistics